<resources>
    <string name="viewStudent" />
    <string name="parolaStud" />
    <string name="logStudent">Login</string>
    <string name="viewRegister">Register</string>
    <string name="viewEmailProfesor" />
    <string name="parolaProfesor" />
    <string name="LogProf">Login</string>
    <string name="registerProfesor">Register</string>
    <string name="numeStudent" />
    <string name="emailStudentRegister" />
    <string name="parolaStudentRegister" />
    <string name="dataStudent">Data nasterii</string>
    <string name="tvDateStudent" />
    <string name="tvSexStudent">Sex</string>
    <string name="rbStudFeminin">Feminin</string>
    <string name="rbStudentMasculin">Masculin</string>
    <string name="btnSaveStudent">Save</string>
    <string name="btnInapoiStudent">Inapoi</string>
    <string name="numeProfesor" />
    <string name="emailProfesorRegister" />
    <string name="parolaProfesorRegister" />
    <string name="rbProfMasculin">Masculin</string>
    <string name="tvSexProfesor">Sex</string>
    <string name="tvDateProfesor" />
    <string name="btnInapoiProfesor">Inapoi</string>
    <string name="btnSaveProfesor">Save</string>
    <string name="rbProfFeminin">Feminin</string>
    <string name="dataProfesor">Data nasterii</string>
    <string name="tvCodStudent">Introdu codul testului</string>
    <string name="edCodTestStud" />
    <string name="cautaButton">Caută</string>
    <string name="emailEditText" />
    <string name="emailTextView">Caută studentul cu emailul:</string>
    <string name="sauTextView">SAU</string>
    <string name="codEditTextHint">Cod</string>
    <string name="codEditText" />
    <string name="codTextView">Caută testul cu codul:</string>
    <string name="numeTextView">Nume test:</string>
    <string name="numeEditText" />
    <string name="listaQuizzTextView" />
    <string-array name="materii">
        <item>Java</item>
        <item>PAW</item>
        <item>POO</item>
        <item>SDD</item>
        <item>Android</item>
        <item>Tehnologii Web</item>
        <item>Multimedia</item>
        <item>Retele</item>
    </string-array>
    <string name="spinnerMaterie"></string>


</resources>
