<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".RegisterProfesor">


    <EditText
        android:id="@+id/editTextnumeProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/numeProfesor"
        android:hint="Nume"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/editTextEmailProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="151dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:layout_centerVertical="true"
        android:text="@string/emailProfesorRegister" />

    <EditText
        android:id="@+id/editTextParolaProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="217dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/parolaProfesorRegister"
        android:hint="Parola"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/buttonDataProfesor"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextnumeProfesor"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="183dp"
        android:background="#64462560"
        android:elevation="15dp"
        android:fadingEdge="horizontal"
        android:text="@string/dataProfesor"
        android:textAllCaps="false"
        android:textColor="#cfcad1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvDateProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextParolaProfesor"
        android:layout_alignRight="@id/buttonDataProfesor"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="196dp"
        android:textStyle="italic" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextnumeProfesor"
        android:layout_alignRight="@id/tvSexProfesor"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginRight="-103dp"
        android:layout_marginBottom="106dp">

        <RadioButton
            android:id="@+id/rbProfFeminin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbProfFeminin"
            android:textColor="#cfcad1" />

        <RadioButton
            android:id="@+id/rbProfMasculin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbProfMasculin"
            android:textColor="#cfcad1" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvSexProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="91dp"
        android:layout_marginBottom="146dp"
        android:text="@string/tvSexProfesor"
        android:textColor="#cfcad1"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@id/buttonDataProfesor"/>

    <Button
        android:id="@+id/btnSaveProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="35dp"
        android:background="#dffff29a"
        android:elevation="15dp"
        android:fadingEdge="horizontal"
        android:text="@string/btnSaveProfesor"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnInapoiProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnSaveProfesor"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="57dp"
        android:background="#dffff29a"
        android:elevation="15dp"
        android:fadingEdge="horizontal"
        android:text="@string/btnInapoiProfesor"
        android:textStyle="bold" />

</RelativeLayout>
