<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reports_layout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/codTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/codEditText"
            android:layout_alignLeft="@+id/codEditText"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="22dp"
            android:text="@string/codTextView"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <AutoCompleteTextView
            android:id="@+id/codEditText"
            android:layout_width="260dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="#11000000"
            android:completionHint="@string/codEditText"
            android:completionThreshold="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/codEditText"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/sauTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/codEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/sauTextView"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sauTextView"
            android:layout_alignStart="@+id/codEditText"
            android:layout_alignLeft="@+id/codEditText"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/emailTextView"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <AutoCompleteTextView
            android:id="@+id/emailEditText"
            android:layout_width="260dp"
            android:layout_height="30dp"
            android:layout_below="@+id/emailTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="#11000000"
            android:completionHint="Cod"
            android:completionThreshold="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/emailEditText"
            android:textColor="#ffffff" />



        <Button
            android:id="@+id/cautaButton"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_below="@+id/emailEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="#dffff29a"
            android:text="@string/cautaButton"
            android:textColor="#ffffff" />

        <include
            layout="@layout/activity_reports_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cautaButton"
            android:layout_marginLeft="20dp"/>

    </RelativeLayout>
</ScrollView>