<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginProfesor">

    <EditText
        android:id="@+id/editTextEmailProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#11000000"
        android:ems="10"
        android:layout_marginStart="83dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="86dp"
        android:hint="Email"
        android:inputType="textPersonName"
        android:text="@string/viewEmailProfesor"
        android:textAlignment="viewStart"
        android:textColorHint="@android:color/background_light"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="193dp" />

    <EditText
        android:id="@+id/editTextParolaProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextEmailProfesor"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="278dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="Parola"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColorHint="@android:color/background_light" />
    <CheckBox
        android:id="@+id/checkBoxProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="82dp"
        android:layout_marginBottom="224dp"
        android:text="Remeber me"
        android:textSize="18sp"
        android:textColor="@android:color/background_light" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="115dp"
        app:cardBackgroundColor="#dffff29a"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:id="@+id/loginProf">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewLogProf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/LogProf"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textViewRegisterProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="44dp"
        android:text="@string/registerProfesor"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>